# gaze-on-facial-landmarks

./: README.rst  setup.cfg
docs/: index.rst
src/pupil_labs/gaze_on_facial_landmarks/: __main__.py  check_ids.py  getpoints.py  map_on_landmarks.py
src/pupil_labs/map_fixations_on_face/: __init__.py  __main__.py  draw_landmarks.py  map_fixations.py  map_on_landmarks.py
tests/: test_api.py
