[metadata]
name = pupil_labs_gaze_on_facial_landmarks
description = Project description
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/python-module-skeleton
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    numpy
    matplotlib
    pandas
    scipy
    pupil-labs-dynamic-rim
    rich
    av 
    opencv-python
python_requires = >=3.9
include_package_data = true
package_dir =
    =src

[options.entry_points]
console_scripts =
    pl-gaze-on-facial-landmarks = pupil_labs.gaze_on_facial_landmarks.__main__:run_main

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
